--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:name=".GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
+
+        <receiver android:name=".MyBroadcastReceiver" android:enabled="true">
+            <intent-filter>
+                <action android:name="my.action.string" />
+                <!-- and some more actions if you want -->
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
